--- a/index.html
+++ b/index.html
@@ -179,15 +179,22 @@
     <script>
       document.addEventListener("DOMContentLoaded", function() {
         playNote = e => {
-          const key = e.target.attributes.id.value;
-          const audio = document.querySelector(`audio[data-key="${key}"]`);
+          const id = e.target.attributes.id.value;
+          const key = document.getElementById(`${id}`);
+          const audio = document.querySelector(`audio[data-key="${id}"]`);
           if (!audio) return;
           if (e.type == "mouseover" && isDown) {
             audio.currentTime = 0;
             audio.play();
+            if (key.classList.contains("white")) {
+              key.classList.add("keydown");
+            }
           } else if (e.type == "mousedown") {
             audio.currentTime = 0;
             audio.play();
+            if (key.classList.contains("white")) {
+              key.classList.add("keydown");
+            }
           }
         };
 
@@ -196,6 +203,14 @@
 
         keys.forEach(key => key.addEventListener("mousedown", playNote));
         keys.forEach(key => key.addEventListener("mouseover", playNote));
+        keys.forEach(key =>
+          key.addEventListener("mouseup", () => key.classList.remove("keydown"))
+        );
+        keys.forEach(key =>
+          key.addEventListener("mouseout", () =>
+            key.classList.remove("keydown")
+          )
+        );
 
         window.addEventListener("mousedown", () => (isDown = true));
         window.addEventListener("mouseup", () => (isDown = false));
